# ocel2-fastapi

./: LICENSE  Makefile  README.md  custom_logger.py  main.py  pyproject.toml
app/: main.py
app/api/: deps.py  healthz.py
app/api/v1/: ocel.py  v1_router.py
app/core/: config.py
app/crud/: crud_event_type.py  crud_request.py
app/db/: session.py
app/db/entity/: event_attribute_entity.py  event_attribute_value_entity.py  event_entity.py  event_object_relationship.py  event_type_entity.py  object_attribute_entity.py  object_attribute_value_entity.py  object_entity.py  object_relationship.py  object_type_entity.py  qualifer.py  qualifier.py
app/db/event/: base.py  event_attribute_entity.py  event_attribute_value_entity.py  event_entity.py  event_type_entity.py  object_attribute_value_entity.py
app/models/: request_model.py
app/utils/: camel_model.py  model_utils.py
